src/workspace/snapshots/protols__workspace__hover__test__workspace_test_hover-3.snap
---
source: src/workspace/hover.rs
expression: "state.hover(&b_uri, Position { line: 10, character: 7 })"
---
contents:
  kind: markdown
  value: "`int64`\n\n---\n\n**Built-in Type**\n\nA signed 64-bit integer using variable-length encoding.\n\n**Details:**\n\n- **Wire format**: Variable-length value (`varint`).\n- **Range**: `-9,223,372,036,854,775,808` to `9,223,372,036,854,775,807` inclusive.\n- **Efficiency**: Inefficient for negative numbers. Negative values are sign-extended and take a full `10 bytes` on the wire. Use `sint64` instead if your field frequently contains negative numbers.\n- **Go type**: `int64`\n- **C++ type**: `int64_t`\n- **Rust type**: `i64`\n"
range:
  start:
    line: 10
    character: 6
  end:
    line: 10
    character: 11
