src/workspace/snapshots/protols__workspace__hover__test__workspace_test_hover-9.snap
---
source: src/workspace/hover.rs
expression: "state.hover(&x_uri, Position { line: 10, character: 4 })"
---
contents:
  kind: markdown
  value: "```protobuf\ncom.inner.secret.SomeSecret\nmessage SomeSecret\n```\n\n---\nSomeSecret is a real secret with hidden string"
range:
  start:
    line: 10
    character: 3
  end:
    line: 10
    character: 20
